--- a/Pipfile
+++ b/Pipfile
@@ -11,8 +11,9 @@ sanpy = "*"
 selenium = "*"
 python-dotenv = "*"
 plotly = "*"
+requests = "*"
 
 [dev-packages]
 
 [requires]
-python_version = "3.8"
+python_version = "3.9"
