added top wallet scrapper for eth and usdt

--- a/Pipfile
+++ b/Pipfile
@@ -12,8 +12,10 @@ selenium = "*"
 python-dotenv = "*"
 plotly = "*"
 requests = "*"
+undetected-chromedriver = "*"
 
 [dev-packages]
+jupyter = "*"
 
 [requires]
 python_version = "3.9"
